# jq-for-windows

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
corpus/: cases.json
docs/: compatibility.md
examples/: generate-corpus.rs
src/: ast.rs  environment.rs  error.rs  lib.rs  main.rs  parser.rs
src/eval/: mod.rs  path.rs  value.rs
tests/: cli.rs  differential.rs  language.rs
tools/: fetch-reference-jq.ps1
